# qount

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/systemd/: qount-runner.service  qount-runner.timer
docs/: current.md  fresh-entry-effect-check-2026-05-14.md  live-baseline-and-strategy-current.md  live-recovery-2026-05-13.md  live-review-2026-05-12.md  live-strategy-and-tuning-2026-05-13.md  quick-handoff.md  strategy-implementation-plan-2026-05-17.md  strategy-optimization-design.md
docs/archive/: README.md  fresh-entry-tuning-plan-2026-05-14.md  live-strategy-and-tuning-2026-05-13.md  position-management-sizing-review-2026-05-13.md
prompts/: decision_prompt_v1.txt  system_prompt_v1.txt
scripts/: healthcheck.sh  mac-monitor.sh  run_once.sh
src/qount/: __init__.py  ai_client.py  analytics.py  backtest.py  candidate_filter.py  decision_schema.py  entry_quality.py  exchange_utils.py  executor.py  hourly_model.py  journal.py  mac_monitor.py  main.py  market.py  models.py  notifier.py  orchestrator.py  research_profile.py  review.py  risk_engine.py  safety.py  settings.py  setup_model.py  trade_policy.py  walk_forward.py
src/qount.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_exchange_throttling.py  test_strategy_optimization.py
